--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cj.restspecs</groupId>
 	<artifactId>rest-specs-pom</artifactId>
-	<version>6.0.0-SNAPSHOT</version>
+	<version>7.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>${project.artifactId}</name>
@@ -55,4 +55,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+<distributionManagement>
+  <snapshotRepository>
+    <id>the-deploy-plugin-makes-me-put-somethign-here-${project.artifactId}</id>
+    <name>the-deploy-plugin-makes-me-put-somethign-here-${project.artifactId}</name>
+    <url>scp://the/deploy/plugin/makes/me/put/something/here/${project.artifactId}</url>
+  </snapshotRepository>
+</distributionManagement>
+
+
 </project>
