--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,6 +23,25 @@
             <testResource><directory>src/test/qunit</directory></testResource>
         </testResources>
 
+        <plugins>
+                     <plugin>
+                 <groupId>com.cj.qunit.mojo</groupId>
+                 <artifactId>qunit-maven-plugin</artifactId>
+                 <version>2.0.8</version>
+                 <executions>
+                     <execution>
+                         <phase>test</phase>
+                         <goals>
+                             <goal>test</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+                 <configuration>
+                     <runner>HTMLUNIT</runner>
+                 </configuration>
+             </plugin>
+        </plugins>
+
         <pluginManagement>
         	<plugins>
         		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
@@ -84,17 +103,5 @@
             <version>2.6</version>
         </dependency>
 
-        <dependency>
-	      <groupId>com.cj.qunit-test-driver</groupId>
-	      <artifactId>qunit-test-driver</artifactId>
-              <scope>test</scope>
-              <version>1.3.6-SNAPSHOT</version>
-        </dependency>
-        <dependency><!-- NEEDED TO AVOID SOME WIERD HTMLUNIT ERROR -->
-            <groupId>net.sourceforge.htmlunit</groupId>
-            <artifactId>htmlunit</artifactId>
-            <version>2.9</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 </project>
