--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 			<plugin>
 				<groupId>com.mycila.maven-license-plugin</groupId>
 				<artifactId>maven-license-plugin</artifactId>
+				<version>1.9.0</version>
 				<configuration>
 					<header>header.txt</header>
 					<strictCheck>true</strictCheck>
