--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,11 +2,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-	<groupId>com.cj.restspecs</groupId>
-	<artifactId>rest-specs-pom</artifactId>
-	<version>7.3.3-SNAPSHOT</version>
-  </parent>
+    <parent>
+        <groupId>com.cj.restspecs</groupId>
+        <artifactId>rest-specs-pom</artifactId>
+        <version>7.3.3-SNAPSHOT</version>
+    </parent>
 
     <artifactId>rest-specs-core</artifactId>
 
@@ -14,69 +14,79 @@
 
     <build>
         <resources>
-            <resource><directory>src/main/javascript</directory></resource>
+            <resource>
+                <directory>src/main/javascript</directory>
+            </resource>
         </resources>
         <testResources>
-            <testResource><directory>src/test/resources</directory></testResource>
-            <testResource><directory>src/test/html</directory></testResource>
-            <testResource><directory>src/test/javascript</directory></testResource>
-            <testResource><directory>src/test/qunit</directory></testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>src/test/html</directory>
+            </testResource>
+            <testResource>
+                <directory>src/test/javascript</directory>
+            </testResource>
+            <testResource>
+                <directory>src/test/qunit</directory>
+            </testResource>
         </testResources>
 
         <plugins>
-                     <plugin>
-                 <groupId>com.cj.qunit.mojo</groupId>
-                 <artifactId>qunit-maven-plugin</artifactId>
-                 <version>2.0.8</version>
-                 <executions>
-                     <execution>
-                         <phase>test</phase>
-                         <goals>
-                             <goal>test</goal>
-                         </goals>
-                     </execution>
-                 </executions>
-                 <configuration>
-                     <runner>HTMLUNIT</runner>
-                 </configuration>
-             </plugin>
+            <plugin>
+                <groupId>com.cj.qunit.mojo</groupId>
+                <artifactId>qunit-maven-plugin</artifactId>
+                <version>2.0.8</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <runner>HTMLUNIT</runner>
+                </configuration>
+            </plugin>
         </plugins>
 
         <pluginManagement>
-        	<plugins>
-        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        		<plugin>
-        			<groupId>org.eclipse.m2e</groupId>
-        			<artifactId>lifecycle-mapping</artifactId>
-        			<version>1.0.0</version>
-        			<configuration>
-        				<lifecycleMappingMetadata>
-        					<pluginExecutions>
-        						<pluginExecution>
-        							<pluginExecutionFilter>
-        								<groupId>
-        									org.codehaus.gmaven
-        								</groupId>
-        								<artifactId>
-        									gmaven-plugin
-        								</artifactId>
-        								<versionRange>
-        									[1.2,)
-        								</versionRange>
-        								<goals>
-        									<goal>compile</goal>
-        									<goal>testCompile</goal>
-        								</goals>
-        							</pluginExecutionFilter>
-        							<action>
-        								<ignore></ignore>
-        							</action>
-        						</pluginExecution>
-        					</pluginExecutions>
-        				</lifecycleMappingMetadata>
-        			</configuration>
-        		</plugin>
-        	</plugins>
+            <plugins>
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.codehaus.gmaven
+                                        </groupId>
+                                        <artifactId>
+                                            gmaven-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [1.2,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>compile</goal>
+                                            <goal>testCompile</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
         </pluginManagement>
     </build>
 
