Adding .idea project directory to the excludes list of license checking--these artifacts are local and not checked into the repository. (pair [dsiefert kramakrishnan])

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 	                    <exclude>**/*.css</exclude>
 	                    <exclude>**/*.who</exclude>
 	                    <exclude>**/*.html</exclude>
+                        <exclude>.idea/**</exclude>
 	                </excludes>
 				</configuration>
 				<executions>
