--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>core</module>
         <module>mockrunner</module>
+        <module>http-objects</module>
         <module>mojo</module>
         <module>server</module>
     </modules>
