v 7.4.0-SNAPSHOT: artifactIds should include something about the project in the name so that they don't collide when in a flattened namespace (e.g. eclipse)

--- a/http-objects/pom.xml
+++ b/http-objects/pom.xml
@@ -4,10 +4,10 @@
     <parent>
         <groupId>com.cj.restspecs</groupId>
         <artifactId>rest-specs-pom</artifactId>
-        <version>7.3.10-SNAPSHOT</version>
+        <version>7.4.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>http-objects</artifactId>
+    <artifactId>restspecs-http-objects</artifactId>
     <name>${project.artifactId}</name>
 
     <dependencies>
