--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -36,7 +36,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.9</version>
         </dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-component-annotations</artifactId>
+			<version>1.5.5</version>
+		</dependency>	</dependencies>
 
 	<build>
 		<plugins>
