--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -37,6 +37,10 @@
             <version>1.9</version>
         </dependency>
 		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>2.0.11</version>
+		</dependency>		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
 			<artifactId>plexus-component-annotations</artifactId>
 			<version>1.5.5</version>
