--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
         				</lifecycleMappingMetadata>
         			</configuration>
         		</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>3.4</version>
+                </plugin>
         	</plugins>
         </pluginManagement>
     </build>
