--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -57,7 +57,13 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<configuration>
+					<goalPrefix>restspecs</goalPrefix>
+				</configuration>
+
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
