--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,47 @@
                     <artifactId>maven-plugin-plugin</artifactId>
                     <version>3.4</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.9.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <failOnError>false</failOnError>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.5</version>
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>deploy</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.2</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>ossrh</serverId>
+                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                    </configuration>
+                </plugin>
         	</plugins>
         </pluginManagement>
     </build>
@@ -114,12 +155,35 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    <developers>
+        <developer>
+            <name>Mark Williams</name>
+            <email>mwilliams@cj.com</email>
+            <organization>CJ Affiliate by Conversant</organization>
+            <organizationUrl>http://www.cj.com</organizationUrl>
+        </developer>
+        <developer>
+            <name>Stu Penrose</name>
+            <email>spenrose@cj.com</email>
+            <organization>CJ Affiliate by Conversant</organization>
+            <organizationUrl>http://www.cj.com</organizationUrl>
+        </developer>
+        <developer>
+            <name>Greg Wiley</name>
+            <email>aztec.rex@jammm.com</email>
+            <organization>CJ Affiliate by Conversant</organization>
+            <organizationUrl>http://www.cj.com</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>https://github.com/cjdev/rest-specs.git</connection>
+        <developerConnection>git@github.com:cjdev/rest-specs.git</developerConnection>
+        <url>https://github.com/cjdev/rest-specs.git</url>
+    </scm>
     <distributionManagement>
         <snapshotRepository>
-            <id>the-deploy-plugin-makes-me-put-somethign-here-${project.artifactId}</id>
-            <name>the-deploy-plugin-makes-me-put-somethign-here-${project.artifactId}</name>
-            <url>scp://the/deploy/plugin/makes/me/put/something/here/${project.artifactId}</url>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
