--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -28,6 +28,26 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<!-- create an empty javadoc jar to satisfy maven central rules -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<classifier>javadoc</classifier>
+							<includes>
+								<include>**/nothing/*</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
