--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,6 +11,14 @@
     <artifactId>rest-specs-core</artifactId>
 
     <name>${pom.artifactId}</name>
+    <url>https://github.com/cjdev/rest-specs.git</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License (GPL)</name>
+            <url>http://www.gnu.org/licenses/gpl.txt</url>
+        </license>
+    </licenses>
 
     <build>
         <resources>
