--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -9,6 +9,14 @@
 
 	<artifactId>rest-specs-html-renderer</artifactId>
 	<name>${project.artifactId}</name>
+	<url>https://github.com/cjdev/rest-specs.git</url>
+
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL)</name>
+			<url>http://www.gnu.org/licenses/gpl.txt</url>
+		</license>
+	</licenses>
 
 	<build>
 		<sourceDirectory>src/main/scala</sourceDirectory>
