--- a/mockrunner/pom.xml
+++ b/mockrunner/pom.xml
@@ -8,7 +8,16 @@
     </parent>
 
     <artifactId>rest-specs-mockrunner</artifactId>
+
     <name>${project.artifactId}</name>
+    <url>https://github.com/cjdev/rest-specs.git</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License (GPL)</name>
+            <url>http://www.gnu.org/licenses/gpl.txt</url>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
