--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -14,6 +14,14 @@
 	<packaging>maven-plugin</packaging>
 
 	<name>${pom.artifactId}</name>
+	<url>https://github.com/cjdev/rest-specs.git</url>
+
+	<licenses>
+		<license>
+			<name>GNU General Public License (GPL)</name>
+			<url>http://www.gnu.org/licenses/gpl.txt</url>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
