--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 
     <name>${project.artifactId}</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License (GPL)</name>
+            <url>http://www.gnu.org/licenses/gpl.txt</url>
+        </license>
+    </licenses>
+
     <modules>
         <module>core</module>
         <module>mockrunner</module>
