--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,6 +12,14 @@
     <artifactId>rest-specs-server</artifactId>
 
     <name>${project.artifactId}</name>
+    <url>https://github.com/cjdev/rest-specs.git</url>
+
+    <licenses>
+        <license>
+            <name>GNU General Public License (GPL)</name>
+            <url>http://www.gnu.org/licenses/gpl.txt</url>
+        </license>
+    </licenses>
 
     <properties>
         <httpobjects-version>0.3.0</httpobjects-version>
