--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,6 +12,7 @@
 
     <name>${pom.artifactId}</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
+    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
 
     <licenses>
         <license>
