--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -8,8 +8,10 @@
 	</parent>
 
 	<artifactId>rest-specs-html-renderer</artifactId>
-	<name>${project.artifactId}</name>
-	<url>https://github.com/cjdev/rest-specs.git</url>
+
+    <name>${project.artifactId}</name>
+    <url>https://github.com/cjdev/rest-specs.git</url>
+    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
 
 	<licenses>
 		<license>
