--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -15,6 +15,7 @@
 
 	<name>${pom.artifactId}</name>
 	<url>https://github.com/cjdev/rest-specs.git</url>
+    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
 
 	<licenses>
 		<license>
