--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <name>${project.artifactId}</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
-
+    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
     <licenses>
         <license>
             <name>GNU General Public License (GPL)</name>
