--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.cj.restspecs</groupId>
         <artifactId>rest-specs-pom</artifactId>
-        <version>9-SNAPSHOT</version>
+        <version>9.0.3</version>
     </parent>
 
     <artifactId>rest-specs-core</artifactId>
