--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.cj.restspecs</groupId>
 		<artifactId>rest-specs-pom</artifactId>
-		<version>9-SNAPSHOT</version>
+		<version>9.0.3</version>
 	</parent>
 
 	<artifactId>rest-specs-html-renderer</artifactId>
