--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.cj.restspecs</groupId>
 		<artifactId>rest-specs-pom</artifactId>
-		<version>9-SNAPSHOT</version>
+		<version>9.0.3</version>
 	</parent>
 
 	<groupId>com.cj.restspecs.mojo</groupId>
