--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cj.restspecs</groupId>
     <artifactId>rest-specs-pom</artifactId>
-    <version>9-SNAPSHOT</version>
+    <version>9.0.3</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
