--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.cj.restspecs</groupId>
         <artifactId>rest-specs-pom</artifactId>
-        <version>9-SNAPSHOT</version>
+        <version>9.0.3</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
