[config] module parent paths

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,6 +6,7 @@
         <groupId>com.cj.restspecs</groupId>
         <artifactId>rest-specs-pom</artifactId>
         <version>10-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>rest-specs-core</artifactId>
