--- a/http-objects/pom.xml
+++ b/http-objects/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.cj.restspecs</groupId>
         <artifactId>rest-specs-pom</artifactId>
         <version>10-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>restspecs-http-objects</artifactId>
