--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.cj.restspecs</groupId>
         <artifactId>rest-specs-pom</artifactId>
         <version>10-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
