[config] module names and descriptions

--- a/http-objects/pom.xml
+++ b/http-objects/pom.xml
@@ -10,9 +10,10 @@
 
     <artifactId>restspecs-http-objects</artifactId>
 
-    <name>${project.artifactId}</name>
+    <name>RESTSPECS :: HTTP Objects Integration</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
-    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
+    <description>A test-friendly mechanism for expressing RESTful http contracts.
+        Integration with HTTP Objects</description>
 
     <licenses>
         <license>
