--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,9 +11,9 @@
 
     <artifactId>rest-specs-core</artifactId>
 
-    <name>${pom.artifactId}</name>
+    <name>RESTSPECS :: Core</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
-    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
+    <description>A test-friendly mechanism for expressing RESTful http contracts. Core software module</description>
 
     <licenses>
         <license>
