--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -10,9 +10,9 @@
 
 	<artifactId>rest-specs-html-renderer</artifactId>
 
-    <name>${project.artifactId}</name>
+	<name>RESTSPECS :: HTML Documentation Renderer</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
-    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
+    <description>A test-friendly mechanism for expressing RESTful http contracts. Documentation renderer.</description>
 
 	<licenses>
 		<license>
