--- a/mockrunner/pom.xml
+++ b/mockrunner/pom.xml
@@ -10,9 +10,9 @@
 
     <artifactId>rest-specs-mockrunner</artifactId>
 
-    <name>${project.artifactId}</name>
+    <name>RESTSPECS :: Mock Runner</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
-    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
+    <description>A test-friendly mechanism for expressing RESTful http contracts. Mock runner integration.</description>
 
     <licenses>
         <license>
