--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -13,9 +13,9 @@
 	<artifactId>restspecs-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 
-	<name>${pom.artifactId}</name>
+	<name>RESTSPECS :: Maven Plugin</name>
 	<url>https://github.com/cjdev/rest-specs.git</url>
-    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
+    <description>A test-friendly mechanism for expressing RESTful http contracts. Maven support plugin.</description>
 
 	<licenses>
 		<license>
