--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,9 +12,9 @@
 
     <artifactId>rest-specs-server</artifactId>
 
-    <name>${project.artifactId}</name>
+    <name>RESTSPECS :: Spec Server</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
-    <description>A test-friendly mechanism for expressing RESTful http contracts</description>
+    <description>A test-friendly mechanism for expressing RESTful http contracts. Specification server.</description>
 
     <licenses>
         <license>
