[config] rename maven plugin module directory

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>core</module>
         <module>mockrunner</module>
         <module>http-objects</module>
-        <module>mojo</module>
+        <module>maven-plugin</module>
         <module>server</module>
         <module>html-renderer</module>
     </modules>
