[config] bill-of-materials

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,16 +4,16 @@
 
     <parent>
         <groupId>com.cj.restspecs</groupId>
-        <artifactId>rest-specs-pom</artifactId>
+        <artifactId>restspecs-bom</artifactId>
         <version>10-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../bom/pom.xml</relativePath>
     </parent>
 
     <artifactId>rest-specs-core</artifactId>
 
     <name>RESTSPECS :: Core</name>
     <url>https://github.com/cjdev/rest-specs.git</url>
-    <description>A test-friendly mechanism for expressing RESTful http contracts. Core software module</description>
+    <description>A test-friendly mechanism for expressing RESTful http contracts. Core software module.</description>
 
     <licenses>
         <license>
