--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -1,11 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>com.cj.restspecs</groupId>
-		<artifactId>rest-specs-pom</artifactId>
+		<artifactId>restspecs-bom</artifactId>
 		<version>10-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../bom/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>rest-specs-html-renderer</artifactId>
