--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>maven-plugin</module>
         <module>server</module>
         <module>html-renderer</module>
+        <module>bom</module>
     </modules>
 
     <build>
