--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -4,9 +4,9 @@
 
 	<parent>
 		<groupId>com.cj.restspecs</groupId>
-		<artifactId>restspecs-bom</artifactId>
+		<artifactId>restspecs-depman</artifactId>
 		<version>10-SNAPSHOT</version>
-		<relativePath>../bom/pom.xml</relativePath>
+		<relativePath>../depman/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>rest-specs-html-renderer</artifactId>
