--- a/http-objects/pom.xml
+++ b/http-objects/pom.xml
@@ -22,6 +22,10 @@
         </license>
     </licenses>
 
+    <prerequisites>
+        <maven>3.3</maven>
+    </prerequisites>
+
     <dependencies>
         <dependency>
             <groupId>com.mockrunner</groupId>
