--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,6 +22,10 @@
         </license>
     </licenses>
 
+    <prerequisites>
+        <maven>3.3</maven>
+    </prerequisites>
+
     <build>
         <resources>
             <resource>
