--- a/depman/pom.xml
+++ b/depman/pom.xml
@@ -14,6 +14,10 @@
     <url>https://github.com/cjdev/rest-specs</url>
     <description>A test-friendly mechanism for expressing RESTful http contracts. Dependency and plugin management.</description>
 
+    <prerequisites>
+        <maven>3.3</maven>
+    </prerequisites>
+
     <properties>
     </properties>
 
