--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -22,6 +22,10 @@
 		</license>
 	</licenses>
 
+	<prerequisites>
+		<maven>3.3</maven>
+	</prerequisites>
+
 	<build>
 		<sourceDirectory>src/main/scala</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
