--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -24,6 +24,10 @@
 		</license>
 	</licenses>
 
+	<prerequisites>
+		<maven>3.3</maven>
+	</prerequisites>
+
 	<dependencies>
 		<dependency>
 			<groupId>commons-io</groupId>
