--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
         <module>bom</module>
     </modules>
 
+    <prerequisites>
+        <maven>3.3</maven>
+    </prerequisites>
+
     <build>
         <plugins>
             <plugin>
