--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -19,6 +19,10 @@
     <maven>3.3</maven>
   </prerequisites>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
