--- a/html-renderer/pom.xml
+++ b/html-renderer/pom.xml
@@ -22,6 +22,10 @@
 		</license>
 	</licenses>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<prerequisites>
 		<maven>3.3</maven>
 	</prerequisites>
