--- a/mockrunner/pom.xml
+++ b/mockrunner/pom.xml
@@ -26,6 +26,10 @@
         <maven>3.3</maven>
     </prerequisites>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.mockrunner</groupId>
