--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
         <maven>3.3</maven>
     </prerequisites>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
