--- a/server/pom.xml
+++ b/server/pom.xml
@@ -28,6 +28,7 @@
     </prerequisites>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <httpobjects-version>0.3.0</httpobjects-version>
         <jackson-version>2.3.0</jackson-version>
     </properties>
