[config] root pom

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
       <organizationUrl>http://www.cj.com</organizationUrl>
     </developer>
     <developer>
+      <name>Jeegar Shah</name>
+      <email>jshah@cj.com</email>
+      <organization>CJ Affiliate by Conversant</organization>
+      <organizationUrl>http://www.cj.com</organizationUrl>
+    </developer>
+    <developer>
       <name>Stu Penrose</name>
       <email>spenrose@cj.com</email>
       <organization>CJ Affiliate by Conversant</organization>
