--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.cj.restspecs</groupId>
   <artifactId>rest-specs-pom</artifactId>
-  <version>10-SNAPSHOT</version>
+  <version>10.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>RESTSPECS :: Modules Parent</name>
   <url>https://github.com/cjdev/rest-specs.git</url>
@@ -38,6 +38,7 @@
           <target>1.5</target>
           <source>1.5</source>
         </configuration>
+        <version>3.6.1</version>
       </plugin>
       <plugin>
         <groupId>com.mycila.maven-license-plugin</groupId>
